<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackMIT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list_soda">List your favorite sodas, separate with a comma</string>
    <string name="star_1">1 Star</string>
    <string name="star_2">2 Stars</string>
    <string name="star_3">3 Stars</string>
    <string name="star_4">4 Stars</string>
    <string name="star_5">5 Stars</string>

</resources>
